[project]
name = "antisniff-module"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.135.1",
    "numpy>=2.4.4",
    "onnxruntime>=1.24.4",
    "pandas>=3.0.3",
    "pytest>=9.0.3",
    "requests>=2.33.1",
    "scikit-learn>=1.8.0",
    "uvicorn>=0.41.0",
]
